# library-manager

./: .gitignore  CMakeLists.txt  app.py  build.sh  build_cpp.sh  index.html  launcher.cpp  library.db  readme.md  requirements.txt  server.cpp
test/: api.js  jest.config.js  modal.js  package-lock.json  package.json  pagination.js  render.js
test/__tests__/: api.test.js  modal.test.js
tmp/include/: crow_all.h
